--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   background-attachment: fixed;
   width: auto;
   overflow-x: hidden;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .top {
@@ -19,12 +20,21 @@ body {
   background-color: black;
   top: 0px;
   z-index: 1;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .fas {
   color: #0cafd8;
   font-size: 10px;
-  margin-right: 20px;
+  padding: 0 50px 0 50px;
 }
 
 .iconTxt {
@@ -38,17 +48,25 @@ body {
 }
 
 .topElements {
-  width: 960px;
+  width: 900px;
   line-height: 46px;
-  margin-left: 300px;
 }
 
 .nav {
   width: 100%;
-  height: 80px;
+  height: 60px;
   background-color: rgba(0, 0, 0, 0.308);
   position: relative;
   top: 50px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 #logoCar {
@@ -56,17 +74,38 @@ body {
 }
 
 .logo {
-  width: 150px;
+  width: 900px;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-left: 300px;
+  vertical-align: auto;
+}
+
+.navButtons > a {
+  color: #fff;
+  text-decoration: none;
+  padding-left: 50px;
+}
+
+.navButtons {
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  height: 100%;
+  width: 680px;
+  position: relative;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=style.css.map */
