--- a/style.scss
+++ b/style.scss
@@ -9,18 +9,10 @@ body {
     @include top;
 }
 .fas{
-    color: rgb(12, 175, 216);
-    font-size: 10px;
-    margin-right: 20px;
+    @include fas;
 }
 .iconTxt{
-    color:rgba(255, 255, 255, 0.856);
-    font-family:sans-serif;
-    font-weight:500;
-    letter-spacing: 1.5px;
-    font-size: 11px;
-    margin-left: 8px;
-    -webkit-font-smoothing: always;
+    @include iconTxt;
 }
 .topElements{
     @include topElements;
@@ -30,16 +22,16 @@ body {
 }
 
 #logoCar{
-    width: 150px;
+    @include logoSize;
 }
 .logo{
-    width: 150px;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    margin-left: 300px;
+    @include logo;  
 }
+
+.navButtons > a{
+    @include linkProp;    
+}
+
 .navButtons{
     @include navButtons;
 }
