--- a/style.css
+++ b/style.css
@@ -108,4 +108,11 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+
+.contentContainer {
+  background-color: aqua;
+  width: 100%;
+  height: 300px;
+  display: block;
+}
 /*# sourceMappingURL=style.css.map */
