--- a/style.scss
+++ b/style.scss
@@ -35,3 +35,10 @@ body {
 .navButtons{
     @include navButtons;
 }
+
+.contentContainer{
+    background-color: aqua;
+    width: 100%;
+    height: 300px;
+    display: block;
+}
